fix(quality): P0 audit corrections — PromQL typo, flowcontrol v1, ZGC flags, Go barrier date, buf pin, SLSA labels, STYLE 6-8